--- a/package.json
+++ b/package.json
@@ -16,13 +16,16 @@
     "@types/leaflet": "^1.9.21",
     "@vercel/postgres": "^0.10.0",
     "bcryptjs": "^3.0.2",
+    "framer-motion": "^12.23.24",
     "jsonwebtoken": "^9.0.2",
     "leaflet": "^1.9.4",
+    "lucide-react": "^0.546.0",
     "next": "15.5.4",
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "react-hot-toast": "^2.6.0",
     "react-markdown": "^10.1.0",
+    "swiper": "^12.0.3",
     "zod": "^4.1.12"
   },
   "devDependencies": {
